--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
-python-telegram-bot
-pytest
-flake8
-python-decouple
+APScheduler==3.6.3
+attrs==21.4.0
+cachetools==4.2.2
+certifi==2021.10.8
+flake8==4.0.1
+iniconfig==1.1.1
+mccabe==0.6.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.8
+pytest==7.1.1
+python-telegram-bot==13.11
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+six==1.16.0
+tomli==2.0.1
+tornado==6.1
+tzdata==2022.1
+tzlocal==4.2
