--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 APScheduler==3.6.3
 attrs==21.4.0
+backports.zoneinfo==0.2.1
 cachetools==4.2.2
 certifi==2021.10.8
 flake8==4.0.1
@@ -12,6 +13,7 @@ pycodestyle==2.8.0
 pyflakes==2.4.0
 pyparsing==3.0.8
 pytest==7.1.1
+python-decouple==3.6
 python-telegram-bot==13.11
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
